fixed x scrolling bug on mobile

--- a/earthbreak/src/components/navbar/navbar.module.css
+++ b/earthbreak/src/components/navbar/navbar.module.css
@@ -1,3 +1,5 @@
+/*the height for the navbar on mobile is 14vh and on desktop 10vh*/
+
 .Button_container{
   display:inline;
   padding: 100px;
@@ -25,6 +27,7 @@
 }
 
 .overtop{
+    z-index: 101;
     background-color: var(--main-blue-color);
     height: 100vh;
     width: 100vw;
@@ -42,6 +45,11 @@
 
 
     .NavBar_Container{
+      position: fixed;
+      top: 0;
+      z-index: 100;
+      width: 100%;
+      
       height: 14vh;
       background-color: var(--main-white-color);;
       max-width: 100vw;
