--- a/earthbreak/src/index.css
+++ b/earthbreak/src/index.css
@@ -14,7 +14,9 @@ code {
 
 
 :root {
+
   --main-blue-color: #4381C1;
+  --off-white-color: #d7d7d7;
   --main-white-color: #efefef;
   --main-black-color: #000000;
   --main-brown-color: #B88E93;
